--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -2,6 +2,7 @@ inherit_from: .rubocop_todo.yml
 
 AllCops:
   TargetRubyVersion: 2.4
+  NewCops: disable
 
 Layout/ClosingParenthesisIndentation:
   Enabled: false
